# Wickbert

./: CMakeLists.txt  README.md  wickbert.dox
Particles/: CMakeLists.txt  ParFileManager.cpp  ParFileManager.h  ParticleAttribute.cpp  ParticleAttribute.h  ParticleBehavior.cpp  ParticleBehavior.h  ParticleShader.cpp  ParticleShader.h  ParticleStuff.cpp  ParticleStuff.h  ParticleStuffParameters.cpp  ParticleStuffParameters.h  ParticleSystem.cpp  ParticleSystem.h  Particles.cpp  Particles.h  ParticlesInclude.h  accum_frag_d.cg  cleangl.h  clip_frag.cg  clip_frag_d.cg  factory.h  flat_frag.cg  nv_pbuffer.cpp  nv_pbuffer.h  pstools.cpp  pstools.h  smooth_frag_p1.cg  smooth_frag_p2.cg  svd.cpp  svd.h  vertex.cg
Particles/Attributes/: AdaptiveRepulsionData.cpp  AdaptiveRepulsionData.h  Contours.cpp  Contours.h  DuplicateParticlesAlongNormal.cpp  DuplicateParticlesAlongNormal.h  FaceOrientation.cpp  FaceOrientation.h  FacePosition.cpp  FacePosition.h  ImplicitInterrogator.cpp  ImplicitInterrogator.h  ImplicitInterrogatorCached.cpp  ImplicitInterrogatorCached.h  LightPosition.cpp  LightPosition.h  MeshInterrogator.cpp  MeshInterrogator.h  OBJPosition.cpp  OBJPosition.h  ParticleAcceleration.cpp  ParticleAcceleration.h  ParticleAge.cpp  ParticleAge.h  ParticleBoundingBox.cpp  ParticleBoundingBox.h  ParticleDensity.cpp  ParticleDensity.h  ParticleDesiredOrientation.cpp  ParticleDesiredOrientation.h  ParticleEigen.cpp  ParticleEigen.h  ParticleLocality.cpp  ParticleLocality.h  ParticleLocalityGrid.cpp  ParticleLocalityGrid.h  ParticleMaterial.cpp  ParticleMaterial.h  ParticleMesh.cpp  ParticleMesh.h  (+26 more)
Particles/Attributes/Bonus/: SPHGravity.cpp  SPHGravity.h  SPHPressure.cpp  SPHPressure.h
Particles/Behaviors/: AccelerationIntegrator.cpp  AccelerationIntegrator.h  AsymmetricRepulsion.cpp  AsymmetricRepulsion.h  CurveAdhesion.cpp  CurveAdhesion.h  DeCarloSuggestiveContourAdhesion.cpp  DeCarloSuggestiveContourAdhesion.h  FeatureDetector.cpp  FeatureDetector.h  KDPropagation.cpp  KDPropagation.h  KeepInBounds.cpp  KeepInBounds.h  ParabolicsAdhesion.cpp  ParabolicsAdhesion.h  ParticleCreation.cpp  ParticleCreation.h  ParticleFate.cpp  ParticleFate.h  ParticleFateContour.cpp  ParticleFateContour.h  ParticleRepulsion.cpp  ParticleRepulsion.h  ParticleRepulsionContour.cpp  ParticleRepulsionContour.h  ParticleValueDeath.cpp  ParticleValueDeath.h  ShadowAdhesion.cpp  ShadowAdhesion.h  ShadowDetector.cpp  ShadowDetector.h  SilhouetteAdhesion.cpp  SilhouetteAdhesion.h  SilhouetteDetector.cpp  SilhouetteDetector.h  SingularityAdhesion.cpp  SingularityAdhesion.h  SingularityRepulsion.cpp  SingularityRepulsion.h  (+16 more)
Particles/Behaviors/Bonus/: ClusterMeshInterrogator.cpp  ClusterMeshInterrogator.h  CriticalPointInterrogator.cpp  CriticalPointInterrogator.h  KDPropagation.cpp  KDPropagation.h  MeshShape.cpp  MeshShape.h  NeighborAlignment.cpp  NeighborAlignment.h  OneSidedRepulsion.cpp  OneSidedRepulsion.h  RBFPropagation.cpp  RBFPropagation.h  SPHConstraint.cpp  SPHConstraint.h  SPHInitial.cpp  SPHInitial.h  SPHTension.cpp  SPHTension.h  SPHViscosity.cpp  SPHViscosity.h  SilhouetteFate.cpp  SilhouetteFate.h  SingularityAdhesion.cpp  SingularityAdhesion.h  SingularityInterrogator.cpp  (+11 more)
Particles/Shaders/: CopyParticle.cpp  CopyParticle.h  FindFirstIntersectionWithImplicitsShader.cpp  FindFirstIntersectionWithImplicitsShader.h  IntervalSubdivision.cpp  IntervalSubdivision.h  OrientParticle.cpp  OrientParticle.h  ParticleShaderCylinder.cpp  ParticleShaderCylinder.h  ParticleShaderDisk.cpp  ParticleShaderDisk.h  ParticleShaderDiskVisibility.cpp  ParticleShaderDiskVisibility.h  ParticleShaderGradientField.cpp  ParticleShaderGradientField.h  ParticleShaderLink.cpp  ParticleShaderLink.h  ParticleShaderSphere.cpp  ParticleShaderSphere.h  ParticleShaderText.cpp  ParticleShaderText.h  ParticleShaderTriangle.cpp  ParticleShaderTriangle.h  ParticleShaderVoronoi.cpp  ParticleShaderVoronoi.h  ParticleShaderVoronoiPhong.cpp  ParticleShaderVoronoiPhong.h  Rainbow.cpp  Rainbow.h  ShaderAnimation.cpp  ShaderAnimation.h  ShaderBoundingBox.cpp  ShaderBoundingBox.h  ShaderContour.cpp  ShaderContour.h  ShaderContourSimple.cpp  ShaderContourSimple.h  ShaderDeCarloSuggestiveContour.cpp  ShaderDeCarloSuggestiveContour.h  (+26 more)
Surface/: Box.cpp  Box.h  CMakeLists.txt  IMatrix.cpp  IMatrix.h  Infinite.h  Interval.h  KDTree.h  RandomStream.cpp  RandomStream.h  SurfParam.cpp  SurfParam.h  Surface.cpp  Surface.h  ThinPlateSpline.cpp  ThinPlateSpline.h  gmTNTconvert.cpp  gmTNTconvert.h  itoa.cpp  itoa.h
Surface/Implicit/: GlobalListObject.h  ITKImplicit.cpp  ITKImplicit.h  Icosahedral.cpp  Icosahedral.h  ImpFileManager.cpp  ImpFileManager.h  Implicit.cpp  Implicit.h  VTKImplicit.cpp  VTKImplicit.h  pixmaps.h  polygonizer.cpp  polygonizer.h
Surface/OpenMesh/: ClusterMesh.cpp  ClusterMesh.h  ClusterMeshTraits.h  OpenMeshUtility.h  ParticleMeshTraits.h  SurfaceMesh.h  TriMesh.cpp  TriMesh.h
ism/: CMakeLists.txt  ContourCritical.cpp  ContourCritical.h  ContourCriticalPointsGSL.cpp  ContourCriticalPointsGSL.h  CriticalMesh.cpp  CriticalMesh.h  GaussJordan.cpp  GaussJordan.h  Jacobi.cpp  Jacobi.h  Newton.cpp  Newton.h  NewtonClassify.cpp  NewtonClassify.h  NewtonCritical.cpp  NewtonCritical.h  NewtonDegenerate.cpp  NewtonDegenerate.h  SearchCritical.cpp  SearchCritical.h  SearchDegenerate.cpp  SearchDegenerate.h  SingularityClassification.cpp  SingularityClassification.h  contractors.cpp  contractors.h
tests/: CMakeLists.txt  test_interval.cpp  test_interval.vcproj
tests/matlab/: ftest.m  test_interval.m
wxModeler/: CMakeLists.txt  ClipartFrame.cpp  ClipartFrame.h  DisplayWindow.cpp  DisplayWindow.h  Info.plist  LogFrame.cpp  LogFrame.h  ParticleMultiTree.cpp  ParticleMultiTree.h  ParticleTree.cpp  ParticleTree.h  ParticleTwiddle.cpp  ParticleTwiddle.h  SVGshader.cpp  SVGshader.h  SurfaceTree.cpp  SurfaceTree.h  dcsvg.cpp  dcsvg.h  defaultparticlesystem.par  voronoi.par  voronoi_phong.par  wxModeler.cpp  wxModeler.h
wxModeler/bitmaps/: ParticleSystem.xpm  ParticleSystems.xpm  Particles.xpm
wxModeler/viewer/: viewer.cpp  viewer.h
(+341 files in other folders)
